k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  type: LoadBalancer
  selector:
    app: java-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
